# learn-auth

./: docker-compose.yml
backend/: .env  .env.dev  .env.example  .env.prod  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/handler/: health.go  root.go
backend/internal/middleware/: logger.go
backend/internal/model/: response.go
backend/internal/repository/: postgres.go  redis.go
backend/src/: main.rs
frontend/: .gitignore  Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Navbar.js
