[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# 웹 프레임워크 및 비동기 런타임
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# 데이터베이스 (PostgreSQL 예시)
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid"] }

# 레디스
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# 데이터 직렬화 (JSON 처리 등)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 보안 및 인증
jsonwebtoken = "9.0"
argon2 = "0.5" # 비밀번호 암호화용
rand = "0.8"   # 솔트 생성용

# 유틸리티 및 로깅
dotenvy = "0.15" # .env 파일 로드
tower-http = { version = "0.5", features = ["cors", "trace"] } # 미들웨어
chrono = { version = "0.4", features = ["serde"] } # 시간 처리
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }